fix(item-sliding): wrap the button content in the tag and fix styles

--- a/packages/core/src/components/item-option/item-option.scss
+++ b/packages/core/src/components/item-option/item-option.scss
@@ -3,27 +3,17 @@
 // Item Option
 // --------------------------------------------------
 
-ion-item-option {
-  @include padding(0, .7em);
-
-  position: relative;
-  display: flex;
-
-  align-items: center;
-
-  min-width: 60px;
-}
-
 .item-option-button {
-  @include position(0, 0, 0, 0);
-  @include margin(0);
-  @include padding(0);
-  @include border-radius(0);
-
-  position: absolute;
+  @include padding(0, .7em);
 
   border: 0;
   background: none;
+  color: inherit;
+
+  height: 100%;
+  width: 100%;
+
+  font-size: 1em;
 }
 
 ion-item-options:not([icon-start]) ion-item-option:not([icon-only]) {
@@ -42,6 +32,13 @@ ion-item-options:not([icon-start]) ion-item-option:not([icon-only]) {
 
   width: 100%;
   height: 100%;
+}
+
+.item-option-button [slot="icon-only"] {
+  padding: 0;
+  min-width: .9em;
+
+  font-size: 1.8em;
 }
 
 
